[gd_scene load_steps=15 format=3 uid="uid://de6gkr1np4bl5"]

[ext_resource type="Script" uid="uid://c66tkocuhtfqh" path="res://nodes/ui/main_menu_ui.gd" id="1_83o3p"]
[ext_resource type="FontFile" uid="uid://djaa80v3gxecc" path="res://font/droid.otf" id="2_ohbgo"]
[ext_resource type="Theme" uid="uid://cnudye4assl6f" path="res://nodes/ui/ui_theme.tres" id="3_76nc0"]
[ext_resource type="PackedScene" uid="uid://dohd8y8fvjqcn" path="res://nodes/ui/options_menu/options_menu.tscn" id="5_c68ly"]

[sub_resource type="LabelSettings" id="LabelSettings_aojc0"]
font = ExtResource("2_ohbgo")
font_size = 148
font_color = Color(0.270588, 0.521569, 0.533333, 1)
outline_size = 8
outline_color = Color(0.156863, 0.156863, 0.156863, 1)

[sub_resource type="Gradient" id="Gradient_g225v"]
colors = PackedColorArray(0.0142752, 0.0142752, 0.0142752, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_66byd"]
fractal_type = 2
fractal_octaves = 10
fractal_lacunarity = 1.355
fractal_gain = 1.53

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_iyan8"]
resource_local_to_scene = true
width = 256
height = 256
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_g225v")
noise = SubResource("FastNoiseLite_66byd")

[sub_resource type="Gradient" id="Gradient_0kux8"]
offsets = PackedFloat32Array(0, 0.318182)
colors = PackedColorArray(0.259294, 0.259294, 0.259294, 1, 0, 0, 0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_w7600"]
noise_type = 0
frequency = 0.0019
fractal_octaves = 10
fractal_gain = 1.5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_e1cse"]
width = 1024
height = 1024
generate_mipmaps = false
color_ramp = SubResource("Gradient_0kux8")
noise = SubResource("FastNoiseLite_w7600")

[sub_resource type="Gradient" id="Gradient_yawug"]
offsets = PackedFloat32Array(0, 0.318182)
colors = PackedColorArray(0.443497, 0.00153075, 0.212398, 1, 0, 0, 0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l0cjv"]
noise_type = 4
fractal_octaves = 10
fractal_lacunarity = 2.22
fractal_gain = 0.825

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3irx3"]
width = 1024
height = 1024
generate_mipmaps = false
seamless = true
color_ramp = SubResource("Gradient_yawug")
noise = SubResource("FastNoiseLite_l0cjv")

[node name="MainMenu" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_83o3p")

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_top = 63.0
offset_right = 326.0
offset_bottom = 111.0
grow_horizontal = 2
text = "Fractal Frontiers"
label_settings = SubResource("LabelSettings_aojc0")
horizontal_alignment = 1

[node name="Menu" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -48.0
offset_right = 109.0
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_76nc0")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="UI/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "New Game"

[node name="OptionsButton" type="Button" parent="UI/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Options"

[node name="ExitGameButton" type="Button" parent="UI/Menu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Exit to OS"

[node name="OptionsMenu" parent="UI" instance=ExtResource("5_c68ly")]
unique_name_in_owner = true
offset_left = -199.0
offset_top = -192.0
offset_right = 199.0
offset_bottom = 193.0

[node name="BG" type="CanvasLayer" parent="."]
layer = -100

[node name="GalaxyBackground" type="TextureRect" parent="BG"]
offset_left = -3207.0
offset_top = -1169.0
offset_right = 3290.0
offset_bottom = 1208.0
texture = SubResource("NoiseTexture2D_iyan8")
stretch_mode = 1

[node name="Stars" type="TextureRect" parent="BG"]
offset_left = -3207.0
offset_top = -1169.0
offset_right = 3297.0
offset_bottom = 1175.0
texture = SubResource("NoiseTexture2D_e1cse")
stretch_mode = 1

[node name="Nebulae" type="TextureRect" parent="BG"]
offset_left = -3207.0
offset_top = -1169.0
offset_right = 3297.0
offset_bottom = 1175.0
texture = SubResource("NoiseTexture2D_3irx3")
stretch_mode = 1
